# citation_station

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dockerhub.yaml  gce.yaml
citation-station/: __init__.py  __main__.py
citation-station/events/: on_ready.py
citation_station/: __main__.py  bot.py
citation_station/exts/: on_message.py  on_ready.py  send_citation.py
citation_station/scheduler/: scheduler.py
citation_station/scheduler/jobs/: daily_citation.py
citation_station/utils/: quote.py
