[tool.poetry]
name = "citation-station"
version = "0.1.0"
description = ""
authors = ["James Cameron <36631337+desruc@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "citation_station"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.1.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
